--- a/src/global/_variables.scss
+++ b/src/global/_variables.scss
@@ -16,7 +16,7 @@ $purple: #c2b0c9;
 $blue: #8ac6d1;
 $japanese_indigo: #3b454e;
 
-$top_height: 2em;
+$top_height: 24px;
 $bezel_width: 36px;
 $ui_height: calc(100vh - 72px - 2em);
-$rad: 1em;
+$rad: 24px;
