--- a/src/global/_variables.scss
+++ b/src/global/_variables.scss
@@ -4,7 +4,7 @@ $gray: #ccc;
 $light_gray: #e0e0e0;
 $lighter_gray: #f6f6f6;
 
-$primary: #6C819C;
+$primary: #54C9C3;
 $green: #a8e6cf;
 $yellow: #dcedc1;
 $orange: #ffd3b6;
