desktop sizing fix

--- a/src/global/_variables.scss
+++ b/src/global/_variables.scss
@@ -17,8 +17,8 @@ $dark2: #2A2B2E;
 
 $top_height: 24px;
 $dock_height: 48px;
-$bezel_width: 36px;
-$ui_height: calc(100vh - 72px - 2em);
+$bezel_width: 32px;
+$ui_height: calc(100vh - 88px);
 $rad: 24px;
 
 $light_shadow: 0px -6px 32px 6px rgba(0,0,0,0.1);
