cleaning up gitpod's mess

--- a/src/global/_variables.scss
+++ b/src/global/_variables.scss
@@ -14,12 +14,13 @@ $blue: #8ac6d1;
 $japanese_indigo: #3b454e;
 $dark: #212225;
 $dark2: #2A2B2E;
+$bezel_color: $japanese_indigo;
 
 $top_height: 24px;
 $dock_height: 48px;
 $bezel_width: 32px;
 $ui_height: calc(100vh - 88px);
-$rad: 24px;
+$rad: 12px;
 
 $light_shadow: 0px -6px 32px 6px rgba(0,0,0,0.1);
 
