resize target fix

--- a/src/global/_variables.scss
+++ b/src/global/_variables.scss
@@ -15,18 +15,18 @@ $japanese_indigo: #3b454e;
 $dark: #212225;
 $dark2: #2A2B2E;
 
-$active_window: rgba(white, 0.4);
-$inactive_window: rgba(black, 0.2);
+$active_window: rgba(black, 0.3);
+$inactive_window: rgba(gray, 0.2);
 
 $top_height: 24px;
 $dock_height: 48px;
-$ui_height: calc(100vh - 88px);
+$ui_height: calc(100vh - 64px - 24px);
 $rad: 18px;
 
 $bezel_color: #22272D;
 $bezel_width: 32px;
 
-$light_shadow: 0px 6px 36px 12px rgba(0,0,0,0.1);
+$light_shadow: 0px -6px 36px 12px rgba(0,0,0,0.1);
 $tight_shadow: 0px 0px 12px 6px rgba(0,0,0,0.05);
 
 $quick: 200ms;
@@ -83,7 +83,7 @@ $quick: 200ms;
     position: absolute;
 }
 
-iframe {
+iframe, embed {
     border-radius: 12px;
     height: 100%;
     width: 100%;
