--- a/src/global/_variables.scss
+++ b/src/global/_variables.scss
@@ -20,10 +20,10 @@ $inactive_window: rgba(gray, 0.2);
 
 $top_height: 24px;
 $dock_height: 48px;
-$ui_height: calc(100vh - 64px - 24px);
+$ui_height: calc(100vh - 64px);
 $rad: 18px;
 
-$bezel_color: #22272D;
+$bezel_color: black;
 $bezel_width: 32px;
 
 $light_shadow: 0px -6px 36px 12px rgba(0,0,0,0.1);
