window manager progress and dock things

--- a/src/global/_variables.scss
+++ b/src/global/_variables.scss
@@ -22,6 +22,7 @@ $top_height: 24px;
 $dock_height: 48px;
 $ui_height: calc(100vh - 64px);
 $rad: 18px;
+$blur: blur(36px);
 
 $bezel_color: black;
 $bezel_width: 32px;
