--- a/src/global/_variables.scss
+++ b/src/global/_variables.scss
@@ -15,14 +15,14 @@ $japanese_indigo: #3b454e;
 $dark: #212225;
 $dark2: #2A2B2E;
 
-$active_window: rgba(black, 0.3);
-$inactive_window: rgba(#bdbdbd, 0.3);
+$active_window: rgba(black, 0.6);
+$inactive_window: rgba(#e0e0e0, 0.6);
 
 $top_height: 24px;
 $dock_height: 64px;
 $ui_height: calc(100vh - 24px);
 $rad: 18px;
-$blur: blur(36px);
+$blur: saturate(180%) blur(20px);
 
 $bezel_color: black;
 $bezel_width: 12px;
