--- a/src/global/_variables.scss
+++ b/src/global/_variables.scss
@@ -15,8 +15,8 @@ $japanese_indigo: #3b454e;
 $dark: #212225;
 $dark2: #2A2B2E;
 
-$active_window: rgba(black, 0.6);
-$inactive_window: rgba(#e0e0e0, 0.6);
+$active_window: rgba(black, 0.4);
+$inactive_window: rgba(white, 0.4);
 
 $top_height: 24px;
 $dock_height: 64px;
