--- a/src/global/_variables.scss
+++ b/src/global/_variables.scss
@@ -16,13 +16,13 @@ $dark: #212225;
 $dark2: #2A2B2E;
 
 $active_window: rgba(black, 0.4);
-$inactive_window: rgba(white, 0.4);
+$inactive_window: rgba(#bdbdbd, 0.4);
 
 $top_height: 24px;
 $dock_height: 64px;
 $ui_height: calc(100vh - 24px);
 $rad: 18px;
-$blur: saturate(180%) blur(20px);
+$blur: saturate(120%) blur(20px);
 
 $bezel_color: black;
 $bezel_width: 12px;
