--- a/src/global/_variables.scss
+++ b/src/global/_variables.scss
@@ -1,8 +1,8 @@
 $japanese_indigo: #3b454e;
-$laptop_background: #212225;
+$laptop_background: #20262B;
 
-$active_window: rgba(black, 0.4);
-$inactive_window: rgba(#bdbdbd, 0.4);
+$active_window: rgba(black, 0.3);
+$inactive_window: rgba(#bdbdbd, 0.3);
 
 $top_height: 24px;
 $dock_height: 64px;
