--- a/src/global/_variables.scss
+++ b/src/global/_variables.scss
@@ -1,5 +1,5 @@
 $japanese_indigo: #3b454e;
-$laptop_background: #20262B;
+$laptop_background: #aaa;
 
 $active_window: rgba(black, 0.3);
 $inactive_window: rgba(#bdbdbd, 0.3);
