--- a/src/global/_variables.scss
+++ b/src/global/_variables.scss
@@ -1,8 +1,10 @@
 $japanese_indigo: #3b454e;
 $laptop_background: #aaa;
 
-$active_window: rgba(black, 0.3);
-$inactive_window: rgba(#bdbdbd, 0.3);
+$active_window: rgba(white, 0.2);
+$inactive_window: rgba(#555, 0.2);
+$active_text: rgba(black, 0.8);
+$inactive_text: rgba(white, 0.4);
 
 $top_height: 24px;
 $dock_height: 64px;
