--- a/src/global/_variables.scss
+++ b/src/global/_variables.scss
@@ -1,10 +1,10 @@
 $japanese_indigo: #3b454e;
-$laptop_background: $japanese_indigo;
+$laptop_background: #22272D;
 
-$active_window: rgba(white, 0.6);
-$inactive_window: rgba(#555, 0.5);
-$active_text: black;
-$inactive_text: rgba(white, 0.4);
+$active_window: rgba(black, 0.3);
+$inactive_window: rgba(white, 0.1);
+$active_text: white;
+$inactive_text: rgba(black, 0.4);
 
 $top_height: 24px;
 $dock_height: 64px;
