--- a/src/global/_variables.scss
+++ b/src/global/_variables.scss
@@ -4,7 +4,7 @@ $laptop_background: #22272D;
 $active_window: rgba(black, 0.3);
 $inactive_window: rgba(white, 0.1);
 $active_text: white;
-$inactive_text: rgba(black, 0.4);
+$inactive_text: rgba(white, 0.4);
 
 $top_height: 24px;
 $dock_height: 64px;
