polish(Work.vue): add bg parallax on card hover

--- a/src/global/_variables.scss
+++ b/src/global/_variables.scss
@@ -1,5 +1,5 @@
 $japanese_indigo: #3b454e;
-$laptop_background: #22272D;
+$laptop_background: #222527;
 
 $active_window: rgba(black, 0.3);
 $inactive_window: rgba(white, 0.1);
