--- a/src/global/_variables.scss
+++ b/src/global/_variables.scss
@@ -12,6 +12,7 @@ $dock_height: 64px;
 $ui_width: calc(100vw - 24px);
 $ui_height: calc(100vh - 24px);
 
+$bordered: solid 1px #ffffff10;
 $rad: 18px;
 
 $blur: saturate(120%) blur(42px);
