blue wallpaper and about me working

--- a/src/global/_variables.scss
+++ b/src/global/_variables.scss
@@ -13,6 +13,7 @@ $ui_width: calc(100vw - 24px);
 $ui_height: calc(100vh - 24px);
 
 $bordered: solid 1px #ffffff18;
+$bordered_light: solid 1px #ffffff11;
 $rad: 18px;
 
 $blur: saturate(120%) blur(42px);
